--- a/website/startbootstrap-resume-gh-pages/index.html
+++ b/website/startbootstrap-resume-gh-pages/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Remote Work and COVID-19</title>
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -23,119 +23,195 @@
    </a>
    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
    <div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav">
-     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#literarybackground">Background</a></li>
-     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#var_select">Variable Selection</a></li>
-     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Mapping the USA</a></li>
-     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Model Analysis</a></li>
-     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Conclusion</a></li>
-    </ul>
+       <ul class="navbar-nav">
+           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#literarybackground">Background</a></li>
+           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#var_select">Variable Selection</a></li>
+           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Mapping the USA</a></li>
+           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#trend">Trend Data</a></li>
+           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Model Analysis</a></li>
+           <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Predict Your Situation</a></li>
+       </ul>
    </div>
   </nav>
   <!-- Page Content-->
   <div class="container-fluid p-0">
-   <!-- About-->
-   <section class="resume-section" id="about">
-    <div class="resume-section-content">
-     <h1 class="mb-0">
-      <span class="text-primary">COVID-19: </span>
-      The Rise of Remote Work and the Fall of Mental Health
-     </h1>
-     <div class="subheading mb-5">
-      CSE 6242 Final Project by Andrew Piscioneri, Kevin Ayers, Eric Nagel, Jerrod Pelley, Jeffrey Zhang and Vipul Koti.
-     </div>
-     <p class="lead mb-5">Making sense of COVID-19 and its impact will take a collective effort. This research aims to highlight the impacts of COVID-19 has had on the United States workforce characteristics. Our hope is this research will add to the collective knowledge of the impacts of COVID-19 using novel techniques from the field of data and visual analytics.</p>
- 
-    </div>
-   </section>
-   <hr class="m-0" />
-   <!-- Experience-->
-   <section class="resume-section" id="literarybackground">
-    <div class="resume-section-content">
-     <h2 class="mb-5">Background</h2>
-     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-      <div class="flex-grow-1">
-       <h3 class="mb-0">COVID-19's Impact on the Workforce</h3>
-       <p>
-           Roughly three weeks into January, 2020 the first reported cases of COVID-19 were documented in United States <sup>[7][11]</sup>. COVID-19 has since cascaded across the US and the rest of the world, with the WHO announcing a global pandemic on March 11, 2020 <sup>[11]</sup>. Shortly after, government officials across the country to initiate mandated stay-at-homeorders <sup>[9]</sup>, which effectively limited population movement across much of the US <sup>[9]</sup>. In this initial stage of the pandemic, <b>remote workers were three times less likely to lose their job</b> compared to those without the ability to work remotely <sup>[1]</sup>. <br /><br />Additionally, COVID-19 has been found to increase labor
-           market inequality and multiple industries have seen unique and different labor impacts in terms of remote work due to COVID-19 <sup>[2][4][5][17]</sup>. This inequality has brought a significant risk to workers, as even though <b>97% of employees recommend to others the benefits of remote work and wish to continue to work remotely</b> <sup>[15]</sup>, COVID-19 related job displacement has typically been unrelated to work performance, but has been related to the ability to work remotely <sup>[6]</sup>. These challenges make it more critical than ever to understand what employment data is telling us, so resources can be made available to meet the changing scope of work post-COVID. 
-       </p>
-      </div>
-     </div>
-     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-      <div class="flex-grow-1">
-       <h3 class="mb-0">Understanding Anxiety and Depression Levels</h3>
-       <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-      </div>
-      <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-     </div>
-     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-      <div class="flex-grow-1">
-       <h3 class="mb-0">Junior Web Designer</h3>
-       <div class="subheading mb-3">Shout! Media Productions</div>
-       <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-      </div>
-      <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-     </div>
-     <div class="d-flex flex-column flex-md-row justify-content-between">
-      <div class="flex-grow-1">
-       <h3 class="mb-0">Web Design Intern</h3>
-       <div class="subheading mb-3">Shout! Media Productions</div>
-       <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-      </div>
-      <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
-     </div>
-    </div>
-   </section>
-   <hr class="m-0" />
-   <!-- Education-->
-   <section class="resume-section" id="var_select">
-       <div class="resume-section-content">
-           <h2 class="mb-5">Variable Selection</h2>
-           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-               <div class="flex-grow-1">
-                   <h3 class="mb-0">Correlation Analysis</h3>
-                   <iframe src="https://corr-app-2-ku22afzroa-uw.a.run.app/" scrolling="no" height="600px" width="1400px"></iframe>
-               </div>
-           </div>
-           <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-               <div class="flex-grow-1">
-                   <h3 class="mb-0">Correlation Results</h3>
-                   <p>
-                       Based on the correlative analysis, we can see...
-                   </p>
-               </div>
-           </div>
+      <!-- About-->
+      <section class="resume-section" id="about">
+          <div class="resume-section-content">
+              <h1 class="mb-0">
+                  <span class="text-primary">COVID-19: </span>
+                  The Rise of Remote Work and the Fall of Mental Health
+              </h1>
+              <div class="subheading mb-5">
+                  CSE 6242 Final Project by Andrew Piscioneri, Kevin Ayers, Eric Nagel, Jerrod Pelley, Jeffrey Zhang and Vipul Koti.
+              </div>
+              <p class="lead mb-5">Making sense of COVID-19 and its impact will take a collective effort. This research aims to highlight the impacts of COVID-19 has had on the United States workforce characteristics. Our hope is this research will add to the collective knowledge of the impacts of COVID-19 using novel techniques from the field of data and visual analytics.</p>
+
+          </div>
+      </section>
+      <hr class="m-0" />
+      <!-- Experience-->
+      <section class="resume-section" id="literarybackground">
+          <div class="resume-section-content">
+              <h2 class="mb-5">Background</h2>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0">COVID-19's Impact on the Workforce</h3>
+                      <p>
+                          Roughly three weeks into January, 2020 the first reported cases of COVID-19 were documented in United States. COVID-19 has since cascaded across the US and the rest of the world, with the WHO announcing a global pandemic on March 11, 2020. Shortly after, government officials across the country to initiate mandated stay-at-homeorders, which effectively limited population movement across much of the US. In this initial stage of the pandemic, <b>remote workers were three times less likely to lose their job</b> compared to those without the ability to work remotely. <br /><br />Additionally, COVID-19 has been found to increase labor
+                          market inequality and multiple industries have seen unique and different labor impacts in terms of remote work due to COVID-19. This inequality has brought a significant risk to workers, as even though <b>97% of employees recommend to others the benefits of remote work and wish to continue to work remotely</b>, COVID-19 related job displacement has typically been unrelated to work performance, but has been related to the ability to work remotely. These challenges make it more critical than ever to understand what employment data is telling us, so resources can be made available to meet the changing scope of work post-COVID.
+                      </p>
+                  </div>
+              </div>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0">Understanding the Situation</h3>
+                      <p>
+                          In
+                          the initial stages of the pandemic, remote workers were
+                          three times less likely to lose their job compared to
+                          those without the ability to work remotely . Additionally, COVID-19 has been found to increase labor
+                          market inequality and that industries have seen different
+                          impacts in terms of remote work due to COVID-19
+                          . <b>
+    This inequality has brought a significant
+    risk to workers, as COVID-19 related job displacement
+    is typically unrelated to work performance
+</b>.
+                      </p>
+                  </div>
+              </div>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0">Approach</h3>
+                      <p>
+                          Data and reporting
+                          during the COVID-19 pandemic is not generally available to the public in a consumable format, either
+                          requiring usage of government database APIs or
+                          requiring subscriptions. Additionally, the COVID-19
+                          pandemic has increased mental health disease and has
+                          brought to light the inequities and lack of access of
+                          healthcare. <b>By using this website, we hope you are able to review the data, understand your risk for mental stress, and take the appropriate measures to maintain your mental health.</b>
+                      </p>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <hr class="m-0" />
+      <!-- Education-->
+      <section class="resume-section" id="var_select">
+          <div class="resume-section-content">
+              <h2 class="mb-5">Variable Selection</h2>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <iframe src="https://corr-ku22afzroa-uw.a.run.app/" scrolling="no" height="700px" width="1600px"></iframe>
+                  </div>
+              </div>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0">Correlation Results</h3>
+                      <p>
+                          Based on the correlative analysis, we can see that:
+                          <ul>
+                              <li>There is a negative correlation between Lockdown and Vaccinations </li>
+                              <li>There is a stronger negative correlation between COVID cases (CDCCOUNT) and vaccinations per 100 people than fully vaccinated people per 100.</li>
+                              <li>Income and Mortgage Confidence have the highest impacts on Anxiety, Depression and Worry scores</li>
+                          </ul>
+
+                          Do you see any others that are impactful to you?
+                      </p>
+                  </div>
+              </div>
 
 
-       </div>
-   </section>
-   <hr class="m-0" />
-   <!-- Skills-->
-   <section class="resume-section" id="skills">
-    <div class="resume-section-content">
-     <h2 class="mb-5">Understanding County Data</h2>
-     <div class="subheading mb-3">MAPS!</div>
-    <p>More maps!</p>
-    </div>
-   </section>
-   <hr class="m-0" />
-   <!-- Interests-->
-   <section class="resume-section" id="interests">
-    <div class="resume-section-content">
-     <h2 class="mb-5">Model Results and Analysis</h2>
-     <p>We have a lot of super cool innovative models. Look at these results TA and give us an A...</p>
-    </div>
-   </section>
-   <hr class="m-0" />
-   <!-- Awards-->
-   <section class="resume-section" id="awards">
-    <div class="resume-section-content">
-     <h2 class="mb-5">INNOVATION AND OTHER INNOVATION STUFF</h2>
+          </div>
+      </section>
+      <hr class="m-0" />
+      <!-- Skills-->
+      <section class="resume-section" id="skills">
+          <div class="resume-section-content">
+              <h2 class="mb-5">Mapping the Country</h2>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <iframe src="https://scatter-app-fyt3zcvvka-uw.a.run.app/" scrolling="no" height="700px" width="1500px"></iframe>
+                  </div>
+              </div>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0">Understanding the Data</h3>
+                      <p>
+                          The map above showcases COVID-19 Cases by county, by date. How has your county been doing compared to your neighbors? How has your state been handling the COVID-19 pandemic?
+                      </p>
+                  </div>
+              </div>
 
-    </div>
-   </section>
+
+          </div>
+      </section>
+      <hr class="m-0" />
+      <!-- Interests-->
+      <section class="resume-section" id="trend">
+          <div class="resume-section-content">
+              <h2 class="mb-5">Trends in the Data</h2>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <iframe src="https://time-app-htxlzxuwoa-uw.a.run.app/" scrolling="no" height="700px" width="1600px"></iframe>
+                  </div>
+              </div>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0">Reviewing Trends</h3>
+                      <p>
+                          The trend lines above showcase the full timeline of the COVID datasets that have been collected. Examine how the Mortgage Confidence has dipped during the COVID waves, how the lockdowns have ebbed and flowed for your state, or compare the mental health levels as the pandemic has progressed.  
+                      </p>
+                  </div>
+              </div>
+
+
+          </div>
+      </section>
+      <hr class="m-0" />
+      <!-- Interests-->
+      <section class="resume-section" id="interests">
+          <div class="resume-section-content">
+              <h2 class="mb-5">Model Analysis</h2>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <iframe src="https://trend-marf3gkhtq-uw.a.run.app/" scrolling="no" height="1150px" width="1600px"></iframe>
+                  </div>
+              </div>
+          </div>
+      </section>
+      <hr class="m-0" />
+      <!-- Awards-->
+      <section class="resume-section" id="awards">
+          <div class="resume-section-content">
+              <h2 class="mb-5">Are you At Risk?</h2>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <iframe src="https://pred-app-dzeux7fywa-uw.a.run.app/" scrolling="no" height="700px" width="1600px"></iframe>
+                  </div>
+              </div>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0">Find Help</h3>
+                      <p>
+                          Use the gauge above to understand your risk for Mental Stress. If you grade as a high risk, or believe you are, understand there are resources available to help. Contact the U.S. Department of Health's Helpline at 1-800-622-4357, review <a href="https://www.cdc.gov/mentalhealth/tools-resources/individuals/index.htm" target="_blank">CDC resources</a> available, or consult local resources for assistance.
+                      </p>
+                  </div>
+              </div>
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                  <div class="flex-grow-1">
+                      <h3 class="mb-0">Review the Data</h3>
+                      <p>
+                         We encourage you to review the available CDC and USCB data. For assistance, we've aggregated the data used on the website within the <a href="https://console.cloud.google.com/storage/browser/additional-data;tab=objects?project=focal-sight-330301&prefix=&forceOnObjectsSortingFiltering=false" target="_blank">Google Cloud Platform.</a>
+                      </p>
+                  </div>
+              </div>
+
+          </div>
+      </section>
   </div>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
