--- a/website/startbootstrap-resume-gh-pages/index.html
+++ b/website/startbootstrap-resume-gh-pages/index.html
@@ -149,6 +149,7 @@
 
           </div>
       </section>
+      </section>
       <hr class="m-0" />
       <!-- Interests-->
       <section class="resume-section" id="trend">
@@ -178,7 +179,7 @@
               <h2 class="mb-5">Model Analysis</h2>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                      <iframe src="https://trend-marf3gkhtq-uw.a.run.app/" scrolling="no" height="1150px" width="1600px"></iframe>
+                      <iframe src="https://trend-marf3gkhtq-uw.a.run.app/" scrolling="no" height="2500px" width="1600px"></iframe>
                   </div>
               </div>
           </div>
