--- a/website/startbootstrap-resume-gh-pages/index.html
+++ b/website/startbootstrap-resume-gh-pages/index.html
@@ -14,6 +14,13 @@
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
+  <style>
+    .resume-section-content .flex-grow-1 #attributes label {
+        display: inline-block;
+        margin-right: 25px !important;
+        margin-left: 0px !important;
+    }
+  </style>
  </head>
  <body id="page-top">
   <!-- Navigation-->
@@ -105,7 +112,7 @@
               <h2 class="mb-5">Variable Selection</h2>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                      <iframe src="https://corr-ku22afzroa-uw.a.run.app/" scrolling="no" height="700px" width="1600px"></iframe>
+                      <iframe src="https://corr-ku22afzroa-uw.a.run.app/" scrolling="no" height="700px" width="1170px"></iframe>
                   </div>
               </div>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -134,7 +141,7 @@
               <h2 class="mb-5">Mapping the Country</h2>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                      <iframe src="https://scatter-app-fyt3zcvvka-uw.a.run.app/" scrolling="no" height="700px" width="1500px"></iframe>
+                      <iframe src="https://scatter-app-fyt3zcvvka-uw.a.run.app/" scrolling="no" height="700px" width="1213px"></iframe>
                   </div>
               </div>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -157,7 +164,7 @@
               <h2 class="mb-5">Trends in the Data</h2>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                      <iframe src="https://time-app-htxlzxuwoa-uw.a.run.app/" scrolling="no" height="700px" width="1600px"></iframe>
+                      <iframe src="https://time-app-htxlzxuwoa-uw.a.run.app/" scrolling="no" height="700px" width="1171px"></iframe>
                   </div>
               </div>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -179,7 +186,7 @@
               <h2 class="mb-5">Model Analysis</h2>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                      <iframe src="https://trend-marf3gkhtq-uw.a.run.app/" scrolling="no" height="2500px" width="1600px"></iframe>
+                      <iframe src="https://trend-marf3gkhtq-uw.a.run.app/" scrolling="no" height="2500px" width="1218px"></iframe>
                   </div>
               </div>
           </div>
@@ -191,7 +198,7 @@
               <h2 class="mb-5">Are you At Risk?</h2>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="flex-grow-1">
-                      <iframe src="https://pred-app-dzeux7fywa-uw.a.run.app/" scrolling="no" height="700px" width="1600px"></iframe>
+                      <iframe src="https://pred-app-dzeux7fywa-uw.a.run.app/" scrolling="no" height="700px" width="1171px"></iframe>
                   </div>
               </div>
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
